# rustella

./: .gitignore  Cargo.toml  README.md
emu/: Cargo.toml
emu/src/: atari.rs  cmn.rs  lib.rs  timer.rs
emu/src/cpu/: README.md  am.rs  cmn.rs  core.rs  mod.rs  opc_impl.rs  opc_info.rs  opcodes.json
emu/src/mem/: cmn.rs  core.rs  mmaps.rs  mod.rs
emu/src/riot/: cmn.rs  core.rs  mmaps.rs  mod.rs  pia.rs
emu/src/tia/: README.md  cmn.rs  core.rs  mod.rs  tv.rs
emu/tests/: hcm_6502_AllSuiteA_tests.rs  klaus_6502_functional_tests.rs  riot01_timers.rs  spiceware_collect_1_stable_display.rs  spiceware_collect_2_timers.rs  spiceware_collect_3_score_timer_display.rs  tia01_background.rs  tia02_playfield.rs  tia03_player_sprites.rs
emu/tests/bins/: __compile.ps1  asymmetric.sym  galaga.asm
emu/tests/bins/8blit/: 8blit-s01e02-background.lst  8blit-s01e02-background.sym  8blit-s01e03-background.lst  8blit-s01e03-background.sym  8blit-s01e04-Playfield-01.lst  8blit-s01e05-Ex0-Playfield-Box.lst  8blit-s01e05-Ex0-Playfield-Box.sym  8blit-s01e05-Ex1-Playfield-Box.lst  8blit-s01e05-Ex1-Playfield-Box.sym  8blit-s01e05-Ex2-Playfield-Box.lst  8blit-s01e05-Ex2-Playfield-Box.sym  8blit-s01e05-Ex3-Playfield-Box.lst  8blit-s01e05-Ex3-Playfield-Box.sym  8blit-s01e06-Ex1-First-Sprite.lst  8blit-s01e06-Ex1-First-Sprite.sym  8blit-s01e06-Ex2-Course Movement.lst  8blit-s01e06-Ex2-Course Movement.sym  8blit-s01e06-Ex3-Fine Movement.lst  8blit-s01e06-Ex3-Fine Movement.sym  8blit-s01e06-Ex4-Two Dimensional Sprite.asm  8blit-s01e06-Ex4-Two Dimensional Sprite.lst  8blit-s01e06-Ex4-Two Dimensional Sprite.sym  8blit-s01e07-Ex0-Cat (inefficient).lst  8blit-s01e07-Ex0-Cat (inefficient).sym  8blit-s01e07-Ex1-Cat.lst  8blit-s01e07-Ex1-Cat.sym  8blit-s01e07-Ex2-Cat and Dog.lst  8blit-s01e07-Ex2-Cat and Dog.sym  8blit-s01e07-Ex3-Cat and Dog (unstable) .lst  8blit-s01e07-Ex3-Cat and Dog (unstable) .sym  8blit-s01e07-Ex4-Cat and Dog Vertical Delay (unstable).lst  8blit-s01e07-Ex4-Cat and Dog Vertical Delay (unstable).sym  8blit-s01e07-Ex5-Cat and Dog Vertical Delay.lst  8blit-s01e07-Ex5-Cat and Dog Vertical Delay.sym  8blit-s01e07-Ex6-Missiles with Color.lst  8blit-s01e07-Ex6-Missiles with Color.sym  8blit-s01e07-Ex7-Missiles Movemen and Sizes.lst  8blit-s01e07-Ex7-Missiles Movemen and Sizes.sym  8blit-s01e07-Ex8-Ball Movement and Sizes.lst  8blit-s01e07-Ex8-Ball Movement and Sizes.sym  (+54 more)
emu/tests/bins/collect/: collect-01-StableDisplay.lst  collect-02-Timer.lst  collect-03-ScoreAndTimerDisplay.lst  collect-04-2LineKernel.asm  collect-04-2LineKernel.lst  (+39 more)
emu/tests/common/: mod.rs
emu/tests/snapshots/: riot01_timers__spiceware_collect_2_timers.snap  spiceware_collect_1_stable_display__spiceware_collect_1_stable_display.snap  spiceware_collect_2_timers__spiceware_collect_2_timers.snap  spiceware_collect_3_score_timer_display__spiceware_collect_3_score_timer_display.snap  tia01_background__spiceware_collect_1_stable_display.snap  tia02_playfield__spiceware_collect_3_score_timer_display.snap  tia03_player_sprites__dual_player_fine_move.snap  tia03_player_sprites__single_player_fine_move.snap  tia03_player_sprites__single_static_player.snap
emu/tests/spiceware_collect/: compile.ps1
hw-dbg/: Cargo.toml
hw-dbg/src/: main.rs  repl.rs
hw_dbg/: Cargo.toml
hw_dbg/src/: cmds.rs  color_term.rs  main.rs  repl.rs
web/: .env  (+10 more)
web/emu-wasm/: Cargo.toml
web/emu-wasm/src/: lib.rs  web_tv.rs
(+61 files in other folders)
