[package]
name = "rustella"
edition = "2021"
version = "0.1.0"
description = "Atari 2600 Emulator written in Rust (wasm interface)"
repository = "https://github.com/unrenormalizable/rustella/"
license = "Attribution-NonCommercial-ShareAlike 4.0 International"
authors = ["unrenormalizable <unrenormalizable@gmail.com>"]

[dependencies]
bitflags = "1.2.1"
num-traits = "0.2"

[dev-dependencies]
test-case = "3.3.1"
