[package]
name = "rustella"
edition = "2021"
version = "0.1.0"
description = "Atari 2600 Emulator written in Rust (wasm interface)"
repository = "https://github.com/unrenormalizable/rustella/"
license = "Attribution-NonCommercial-ShareAlike 4.0 International"
authors = ["unrenormalizable <unrenormalizable@gmail.com>"]

[dependencies]
log = "0.4.22"
bitflags = "1.2.1"
num-traits = "0.2"
win_dbg_logger = "0.1.0"

[dev-dependencies]
test-case = "3.3.1"
insta = { version = "1.40.0", features = ["csv"] }
