[package]
name = "rustella-hw-dbg"
edition = "2021"
version = "0.1.0"
description = "Atari 2600 Emulator written in Rust (wasm interface)"
repository = "https://github.com/unrenormalizable/rustella/"
license = "Attribution-NonCommercial-ShareAlike 4.0 International"
authors = ["unrenormalizable <unrenormalizable@gmail.com>"]

[dependencies]
log = "0.4.22"
rustella = { path = "../emu" }
clap = "4.5.16"
reedline = "0.32.0"
clap-repl = "0.3.0"
num-traits = "0.2.19"
homedir = "0.3.3"
colog = "1.3.0"

[dev-dependencies]
test-case = "3.3.1"
