[package]
name = "rustella_hw_dbg"
version = "0.1.0"
authors = ["unrenormalizable <unrenormalizable@gmain.com>"]
edition = "2021"

[dependencies]
rustella = { path = "../emu" }
clap = "4.5.16"
reedline = "0.32.0"
clap-repl = "0.3.0"
num-traits = "0.2.19"
homedir = "0.3.3"

[dev-dependencies]
test-case = "3.3.1"
