[package]
name = "rustella-wasm"
edition = "2021"
version = "0.1.0"
description = "Atari 2600 Emulator written in Rust (wasm interface)"
repository = "https://github.com/unrenormalizable/rustella/"
license = "Attribution-NonCommercial-ShareAlike 4.0 International"
authors = ["unrenormalizable <unrenormalizable@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
rustella = { path = "../../emu" }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"]  }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
